@@ -468,6 +468,20 @@ If you ignore the location `M-x py-guess-pdb-path' might display it.
   :type 'string
   :group 'python)
 
+(defcustom py-hide-show-minor-mode-p  nil
+ "If hide-show minor-mode should be on, default is nil. "
+
+:type 'boolean
+:group 'python
+)
+
+(defcustom py-outline-minor-mode-p  nil
+ "If outline minor-mode should be on, default is nil. "
+
+:type 'boolean
+:group 'python
+)
+
 (defcustom py-load-pymacs-p  nil
  "If Pymacs as delivered with python-mode.el shall be loaded.
 Default is non-nil.
@@ -875,7 +889,8 @@ to select the appropriate python interpreter mode for a file.")
     "for"      "if"     "while"   "finally" "try"
     "with"
     )
-  "*Keywords that can be hidden by hide-show"
+  "Keywords composing visible heads.
+Also used by (minor-)outline-mode "
   :type '(repeat string)
   :group 'python)
 
@@ -1348,6 +1363,7 @@ py-beep-if-tab-change\t\tring the bell if `tab-width' is changed"
   (make-local-variable 'indent-line-function)
   (make-local-variable 'add-log-current-defun-function)
   (make-local-variable 'fill-paragraph-function)
+  (make-local-variable 'outline-regexp)
   ;;
   (set-syntax-table py-mode-syntax-table)
   ;; from python.el, version "22.1"
@@ -1368,6 +1384,12 @@ py-beep-if-tab-change\t\tring the bell if `tab-width' is changed"
         comment-indent-function 'py-comment-indent-function
         indent-region-function 'py-indent-region
         indent-line-function 'py-indent-line
+        outline-regexp (concat (if py-hide-show-hide-docstrings
+                                   "^\\s-*\"\"\"\\|" "")
+                               (mapconcat 'identity
+                                          (mapcar #'(lambda (x) (concat "^\\s-*" x "\\>"))
+                                                  py-hide-show-keywords)
+                                          "\\|"))
         ;; tell add-log.el how to find the current function/method/variable
         add-log-current-defun-function 'py-current-defun
 
@@ -1431,6 +1453,10 @@ py-beep-if-tab-change\t\tring the bell if `tab-width' is changed"
         (kill-buffer "pycomplete.el"))
   (add-hook 'python-mode-hook 'py-beg-of-defun-function)
   (add-hook 'python-mode-hook 'py-end-of-defun-function)
+  (when py-hide-show-minor-mode-p
+    (add-hook 'python-mode-hook '(lambda ()(hs-minor-mode 1))))
+  (when py-outline-minor-mode-p
+    (add-hook 'python-mode-hook '(lambda ()(outline-minor-mode 1))))
   (set (make-local-variable 'eldoc-documentation-function)
        #'python-eldoc-function)
   (add-hook 'eldoc-mode-hook
